+table image link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
         <li>Tell your freinds about the benefits of <em>Lorem Ipsum</em></li>
     </ul>
 
-    <h5>Text from this document is from VSCode</h5>
+    <h4>Look an Image!</h4> 
+    <img src="https://i.kym-cdn.com/entries/icons/mobile/000/033/046/b94.jpg" width="480" alt="Elmo witnesses destruction">
+
+    <h4>Look a Table!</h4>
+    <table>
+        <tr style="background-color: grey;">
+            <td><strong>Basic Plan</strong></td>
+            <td><strong>Standard Plan</strong></td>
+            <td><strong>Premium Plan</strong></td>
+        </tr>
+        <tr>
+            <td>Free</td>
+            <td>$10/Month</td>
+            <td>$200/Year</td>
+        </tr>
+        <tr>
+            <td>12 GB</td>
+            <td>50 GB</td>
+            <td>2000 GB</td>
+        </tr>
+        <tr>
+            <td>1MBS</td>
+            <td>5MBS</td>
+            <td>50MBS</td>
+        </tr>
+        <tr>
+            <td>No Emotes</td>
+            <td>5 Emotes</td>
+            <td>50 Emotes</td>
+        </tr>
+    </table>
+
+    <h5>Text from this document is from VSCode <a href="https://code.visualstudio.com/">VSCode</a></h5>
 </body>
 </html>
