added link, visited link, link hovered, class & id selector

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>All about <em>Lorem Ipsum</em></h1>
     <h2>My "Hello World" website</h2>
-    <h3>by Habin</h3>
+    <h3 class="coolText">by Habin</h3>
 
     <h4>What is <em>Lorem Ipsum</em>?</h4>
     <p><em>Lorem Ipsum</em> dolor, sit amet <strong>consectetur</strong></bold> adipisicing elit. Suscipit, animi! Natus voluptates asperiores fugiat enim perferendis. Tempora quisquam ex vero pariatur <strong>consectetur</strong></bold> a odio quibusdam ipsam, expedita eum, corrupti tenetur!</p>
 
-    <h4>A brief history of <em>Lorem Ipsum</em></h4>
+    <h4 class="coolText">A brief history of <em>Lorem Ipsum</em></h4>
     <p><em>Lorem Ipsum</em> dolor, sit amet <strong>consectetur</strong></bold> adipisicing elit. Explicabo repellendus architecto obcaecati? Molestiae obcaecati inventore iusto alias, eius recusandae provident a in autem magnam asperiores tenetur voluptas fugit corrupti est.</p>
 
-    <h4>Ancient Roots</h4>
+    <h4 id="heading1">Ancient Roots</h4>
     <p><em>Lorem Ipsum</em> dolor sit amet <strong>consectetur</strong></bold> adipisicing elit. Illo aut repellat saepe earum magni, nobis voluptate ducimus neque quae quidem? Vero voluptates et ipsam, tempore totam qui laboriosam commodi dolorum.</p>
     <p><em>Lorem Ipsum</em> dolor sit amet <strong>consectetur</strong></bold> adipisicing elit. Sunt nemo, tenetur illo voluptate quaerat, delectus, nostrum incidunt voluptas inventore culpa aut dolore voluptatum maxime similique dolorum unde! Officiis, blanditiis exercitationem.</p>
     <p><em>Lorem Ipsum</em> dolor sit amet <strong>consectetur</strong></bold> adipisicing elit. Molestias repudiandae deserunt, accusamus reprehenderit error fuga magni enim deleniti autem nobis minus <em> debitis delectus expedita explicabo? </em> Assumenda architecto iusto vitae ad.</p>
